# Practice_Projects

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/Calculator/: Calculator.cpp  Calculator.hpp
src/Palindrome/: Palindrome.cpp  Palindrome.hpp
src/Ragnarok/Hero/: Archer.cpp  Archer.hpp
src/Ragnarok/Interfaces/: IEnemy.hpp  IHero.hpp
test/: CMakeLists.txt  CalculatorTest.cpp  PalindromeTest.cpp  calculator_test.cpp  main.cpp
test/Ragnarok/Hero/: ArcherTest.cpp
test/Ragnarok/Mocks/: EnemyMock.hpp
